--- a/package.json
+++ b/package.json
@@ -5,23 +5,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "dotenv -e .env.test -- vitest run",
-    "test:watch": "dotenv -e .env.test -- vitest",
+    "test": "dotenv -f .env.test -- vitest run",
+    "test:watch": "dotenv -f .env.test -- vitest",
     "dev": "tsx watch --env-file .env src/infra/http/server.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:migrate:test": "dotenv -f .env.test -- drizzle-kit migrate",
+    "pretest": "pnpm run db:migrate:test",
+    "pretest:watch": "pnpm run db:migrate:test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.884.0",
+    "@aws-sdk/lib-storage": "^3.884.0",
     "@fastify/cors": "^11.1.0",
     "@fastify/multipart": "^9.2.1",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.6.0",
     "fastify-type-provider-zod": "^5.0.3",
@@ -31,7 +37,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
+    "@faker-js/faker": "^9.9.0",
     "@types/node": "^24.3.0",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
